--- a/package.json
+++ b/package.json
@@ -1,36 +1,31 @@
 {
-  "name": "gulp-node-11",
-  "version": "1.0.0",
-  "description": "web layout assembly",
-  "main": "dist/index.html",
+  "name": "gatsby-starter-hello-world",
+  "private": true,
+  "description": "A simplified bare-bones starter for Gatsby",
+  "version": "0.1.0",
+  "license": "0BSD",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "start": "npm run develop",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
-  "author": "Crisp developers",
-  "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "gatsby": "^3.2.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  },
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
-    "babel-loader": "^8.0.5",
-    "browser-sync": "^2.26.3",
-    "connect-history-api-fallback": "^1.6.0",
-    "core-js": "^3.8.1",
-    "gulp": "^4.0.0",
-    "gulp-autoprefixer": "^6.0.0",
-    "gulp-babel": "^8.0.0",
-    "gulp-clean": "^0.4.0",
-    "gulp-clean-css": "^4.0.0",
-    "gulp-nunjucks": "^4.0.0",
-    "gulp-remove-empty-lines": "^0.1.0",
-    "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-svg-css": "^1.3.0",
-    "gulp-svgmin": "^2.2.0",
-    "gulp-webp": "^4.0.1",
-    "node-sass": "^4.11.0",
-    "require-dir": "^1.2.0",
-    "webpack": "^4.29.6",
-    "webpack-stream": "^5.2.1"
+    "prettier": "2.2.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+  },
+  "bugs": {
+    "url": "https://github.com/gatsbyjs/gatsby/issues"
   }
 }
