--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   },
   "dependencies": {
     "@fontsource/josefin-sans": "^4.2.2",
+    "classnames": "^2.3.1",
     "gatsby": "^3.2.1",
     "gatsby-plugin-root-import": "^2.0.6",
     "gatsby-plugin-sass": "^4.3.0",
     "react": "^17.0.1",
+    "react-css-modules": "^4.7.11",
     "react-dom": "^17.0.1",
     "sass": "^1.32.10"
   },
