--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.1",
     "react-css-modules": "^4.7.11",
     "react-dom": "^17.0.1",
+    "react-spring": "^9.1.1",
     "sass": "^1.32.10"
   },
   "devDependencies": {
