--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby": "^3.2.1",
     "gatsby-plugin-root-import": "^2.0.6",
     "gatsby-plugin-sass": "^4.3.0",
+    "gsap": "^3.6.1",
     "react": "^17.0.1",
     "react-css-modules": "^4.7.11",
     "react-dom": "^17.0.1",
