--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^17.0.1",
     "react-css-modules": "^4.7.11",
     "react-dom": "^17.0.1",
+    "react-scroll-horizontal": "^1.6.6",
     "react-spring": "^9.1.1",
     "sass": "^1.32.10"
   },
