--- a/package.json
+++ b/package.json
@@ -15,22 +15,23 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "@fontsource/josefin-sans": "^4.2.2",
+    "@fontsource/josefin-sans": "^4.5.9",
     "classnames": "^2.3.1",
-    "gatsby": "^3.2.1",
-    "gatsby-cli": "^3.3.0",
-    "gatsby-plugin-root-import": "^2.0.6",
-    "gatsby-plugin-sass": "^4.3.0",
-    "gsap": "^3.6.1",
-    "react": "^17.0.1",
+    "gatsby": "^4.16.0",
+    "gatsby-cli": "^4.16.0",
+    "gatsby-plugin-root-import": "^2.0.8",
+    "gatsby-plugin-sass": "^5.16.0",
+    "gsap": "^3.10.4",
+    "react": "^18.1.0",
     "react-css-modules": "^4.7.11",
-    "react-dom": "^17.0.1",
+    "react-dom": "^18.1.0",
     "react-scroll-horizontal": "^1.6.6",
-    "react-spring": "^9.1.1",
-    "sass": "^1.32.10"
+    "react-spring": "^9.4.5",
+    "sass": "^1.52.3",
+    "sass-loader": "^13.0.0"
   },
   "devDependencies": {
-    "prettier": "2.2.1"
+    "prettier": "2.6.2"
   },
   "repository": {
     "type": "git",
